--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # Config BD PostgreSQL (ajusta usuario y contraseña)
 spring.datasource.url=jdbc:postgresql://localhost:5432/cafeteria
 spring.datasource.username=postgres
-spring.datasource.password=fca.00
+spring.datasource.password=320216363
 
 # Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
