--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,12 +1,12 @@
 spring.application.name=cafeteria
 
-# Puerto de tu app
+# Puerto de la app
 server.port=8080
 
-# Config BD PostgreSQL (ajusta usuario y contraseña)
-spring.datasource.url=jdbc:postgresql://localhost:5432/cafeteria
-spring.datasource.username=postgres
-spring.datasource.password=320216363
+# Config BD DEMO
+spring.datasource.url=jdbc:postgresql://ep-odd-glitter-a4efj3d7-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=app_user
+spring.datasource.password=App_#15893
 
 # Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
