--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -5,13 +5,16 @@ server.port=8080
 
 # Config BD DEMO
 spring.datasource.url=jdbc:postgresql://ep-odd-glitter-a4efj3d7-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-spring.datasource.username=app_user
-spring.datasource.password=App_#15893
+spring.datasource.username=readonly_user
+spring.datasource.password=Demo_#15978
 
 # Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate y JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Demo
+app.demo=true
